@@ -33,6 +33,9 @@
 -- Tools
 --
 -- $Log$
+-- Revision 1.23  2008/07/09 09:15:56  haraldkipp
+-- EIR code running in RAM, contributed by Michael Fischer.
+--
 -- Revision 1.22  2008/06/28 07:49:33  haraldkipp
 -- Added floating point support for stdio running on ARM.
 --
@@ -185,6 +188,7 @@ nuttools =
                               "at91sam7x256_rom\t\tAT91SAM7X, code running in FLASH\n"..
                               "at91sam7s256_rom\t\tAT91SAM7S, code running in FLASH\n"..
                               "at91sam7se512_rom\tAT91SAM7SE512, code running in FLASH\n"..
+                              "at91sam7se512_ram\tAT91SAM7SE512, code running in RAM (debugging)\n"..
                               "at91sam9260_ram\t\tAT91SAM9260, code running in external RAM\n"..
                               "s3c4510b-ram\t\tSamsung's S3C4510B, code in RAM (unsupported)\n"..
                               "eb40a_ram\t\tAtmel's AT91EB40A, code in RAM at 0x100\n"..
